// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-imWYAI fLZoZn sc-jXbUNg dSJwGX r5-widget"
    transition="entering"
  >
    <div>
      <div
        class="sc-ikkxIA cBvvMS"
      >
        <div>
          <div
            class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
          >
            mfa.email.explain
          </div>
          <form
            class="sc-fPXMVe eavqeI"
            novalidate=""
          >
            <button
              class="sc-eldPxv kznwvY"
              data-testid="submit"
              type="submit"
            >
              mfa.register.email
            </button>
          </form>
        </div>
        <div
          class="sc-iGgWBj fIbmkT"
        >
          <span>
            or
          </span>
        </div>
        <div>
          <div
            class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
          >
            mfa.phoneNumber.explain
          </div>
          <form
            class="sc-fPXMVe eavqeI"
            novalidate=""
          >
            <div
              class="sc-jlZhew bzRqIF"
              required=""
            >
              <label
                class="sc-kpDqfm gyyfze"
                for="phone_number"
              >
                phoneNumber
              </label>
              <input
                autocomplete="tel"
                class="sc-cwHptR hTkSXX"
                data-testid="phone_number"
                id="phone_number"
                labels="[object Object]"
                name="phone_number"
                placeholder="phoneNumber"
                required=""
                type="tel"
                value=""
              />
            </div>
            <button
              class="sc-eldPxv kznwvY"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-ikkxIA cBvvMS"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-imWYAI fLZoZn sc-jXbUNg dSJwGX r5-widget"
    transition="entering"
  >
    <div>
      <div
        class="sc-ikkxIA cBvvMS"
      />
      <div
        class="sc-ikkxIA cBvvMS"
      >
        <div>
          <form
            class="sc-fPXMVe eavqeI"
            novalidate=""
          >
            <button
              class="sc-eldPxv kznwvY"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.email
            </button>
          </form>
        </div>
        <div
          class="sc-iGgWBj fIbmkT"
        >
          <span>
            or
          </span>
        </div>
        <div>
          <form
            class="sc-fPXMVe eavqeI"
            novalidate=""
          >
            <button
              class="sc-eldPxv kznwvY"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.phoneNumber
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
